--- a/index.html
+++ b/index.html
@@ -208,19 +208,38 @@
       <h1 class="font-bold sm:text-5xl text-2xl text-center">Kontak Kami</h1>
       <h1 class="mt-4 text-base text-center">Tetap terhubung melalui sosial media kami </h1>
       <div class="grid grid-cols-3 gap-24 justify-center mx-48 mt-12">
-        <div class="email">
-          <img src="" alt="">
-          <h1 class="text-xs">ayozakat@gmail.com</h1>
-        </div>
-        <div class="instagram">
-          <div class="p-4 bg-primary rounded-full w-fit">
-            <img src="https://www.cdnlogo.com/logos/i/21/instagram-glyph.svg" alt="" width="40px" height="40px">
+        <div id="email" class="flex justify-center">
+          <div class="">
+            <div class="flex justify-center">
+              <div class="p-4 bg-primary rounded-full w-fit">
+                <img src="./dist/img/emailogo.png" alt="" width="40px" height="40px">
+              </div>
+            </div>
+            <h1 class="text-sm text-center mt-4">Email</h1>
+            <h1 class="text-sm text-center">ayozakat@gmail.com</h1>
           </div>
-          <h1 class="text-xs">@ayozakat</h1>
         </div>
-        <div class="whatsapp">
-          <img src="" alt="">
-          <h1 class="text-xs">+62 123 4567 890</h1>
+        <div id="instagram" class="flex justify-center">
+          <div class="">
+            <div class="flex justify-center">
+              <div class="p-4 bg-primary rounded-full w-fit">
+                <img src="./dist/img/instagram.png" alt="" width="30px" height="30px">
+              </div>
+            </div>
+            <h1 class="text-sm text-center mt-4">Instagram</h1>
+            <h1 class="text-sm text-center">@ayozakat</h1>
+          </div>
+        </div>
+        <div id="whatsapp" class="flex justify-center">
+          <div class="">
+            <div class="flex justify-center">
+              <div class="p-4 bg-primary rounded-full w-fit">
+                <img src="./dist/img/whatsapplogo.png" alt="" width="30px" height="30px">
+              </div>
+            </div>
+            <h1 class="text-sm text-center mt-4">WhatsApp</h1>
+            <h1 class="text-sm text-center">+62-123-4567-8900</h1>
+          </div>
         </div>
       </div>
     </section>
