--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     <section id="contact" class="pb-12 pt-24">
       <h1 class="font-bold sm:text-5xl text-2xl text-center">Kontak Kami</h1>
       <h1 class="mt-4 text-base text-center">Tetap terhubung melalui sosial media kami </h1>
-      <div class="grid grid-cols-3 gap-24 justify-center mx-48 mt-12">
+      <div class="grid grid-cols-3 gap-8 md:gap-24 justify-center mx-8 md:mx-48 mt-12">
         <div id="email" class="flex justify-center">
           <div class="">
             <div class="flex justify-center">
@@ -217,8 +217,8 @@
                 </svg>              
               </div>
             </div>
-            <h1 class="text-sm text-center mt-4">Email</h1>
-            <h1 class="text-sm text-center">ayozakat@gmail.com</h1>
+            <h1 class="text-xs md:text-sm text-center mt-4">Email</h1>
+            <h1 class="text-xs md:text-sm text-center">ayozakat@gmail.com</h1>
           </div>
         </div>
         <div id="instagram" class="flex justify-center">
@@ -230,8 +230,8 @@
                 </svg>
               </div>
             </div>
-            <h1 class="text-sm text-center mt-4">Instagram</h1>
-            <h1 class="text-sm text-center">@ayozakat</h1>
+            <h1 class="text-xs md:text-sm text-center mt-4">Instagram</h1>
+            <h1 class="text-xs md:text-sm text-center">@ayozakat</h1>
           </div>
         </div>
         <div id="whatsapp" class="flex justify-center">
@@ -243,8 +243,8 @@
                 </svg>
               </div>
             </div>
-            <h1 class="text-sm text-center mt-4">WhatsApp</h1>
-            <h1 class="text-sm text-center">+62-123-4567-8900</h1>
+            <h1 class="text-xs md:text-sm text-center mt-4">WhatsApp</h1>
+            <h1 class="text-xs md:text-sm text-center">+62-123-4567-8900</h1>
           </div>
         </div>
       </div>
