--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container mx-auto">
         <div class="flex flex-wrap">
           <div class="w-full self-center px-10">
-            <h1 class="font-bold text-2xl flex justify-center self-center text-center">Kalkulator Zakat Mal</h1>
+            <h1 class="font-bold text-2xl lg:text-5xl flex justify-center self-center text-center">Kalkulator Zakat Mal</h1>
           </div>
           <div class="w-full self-center px-10 lg:w-1/2">
             <div class="grid grid-cols-1 gap-6 mt-5">
@@ -207,7 +207,7 @@
     <section id="contact" class="pb-12 pt-24">
       <h1 class="font-bold sm:text-5xl text-2xl text-center">Kontak Kami</h1>
       <h1 class="mt-4 text-base text-center">Tetap terhubung melalui sosial media kami </h1>
-      <div class="grid grid-cols-3 gap-8 md:gap-24 justify-center mx-8 md:mx-48 mt-12">
+      <div class="grid grid-cols-3 gap-8 md:gap-24 justify-center px-8 md:px-48 mt-12">
         <div id="email" class="flex justify-center">
           <div class="">
             <div class="flex justify-center">
@@ -218,7 +218,7 @@
               </div>
             </div>
             <h1 class="text-xs md:text-sm text-center mt-4">Email</h1>
-            <h1 class="text-xs md:text-sm text-center">ayozakat@gmail.com</h1>
+            <h1 class="text-xs md:text-sm text-center font-semibold text-primary">ayozakat@gmail.com</h1>
           </div>
         </div>
         <div id="instagram" class="flex justify-center">
@@ -231,7 +231,7 @@
               </div>
             </div>
             <h1 class="text-xs md:text-sm text-center mt-4">Instagram</h1>
-            <h1 class="text-xs md:text-sm text-center">@ayozakat</h1>
+            <h1 class="text-xs md:text-sm text-center font-semibold text-primary">@ayozakat</h1>
           </div>
         </div>
         <div id="whatsapp" class="flex justify-center">
@@ -244,9 +244,21 @@
               </div>
             </div>
             <h1 class="text-xs md:text-sm text-center mt-4">WhatsApp</h1>
-            <h1 class="text-xs md:text-sm text-center">+62-123-4567-8900</h1>
+            <h1 class="text-xs md:text-sm text-center font-semibold text-primary">+62-123-4567-8900</h1>
           </div>
         </div>
+      </div>
+      <div class="container mx-auto mt-7">
+        <iframe
+          class="mx-auto w-11/12 lg:w-3/4 rounded-xl"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3955.9870592768693!2d112.72280387465376!3d-7.466679692544917!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7e6d71181af21%3A0x4232ab0204ccbfe5!2sSMK%20TELKOM%20Sidoarjo!5e0!3m2!1sid!2sid!4v1684755111272!5m2!1sid!2sid"
+          width="700"
+          height="600"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </div>
     </section>
 <footer class="bg-gray-100">
