--- a/index.html
+++ b/index.html
@@ -122,6 +122,16 @@
         </div>
       </div>
     </section>
+    <section id="calculator" class="container mx-auto">
+      <div class="sm:grid sm:grid-cols-2 sm:items-center pt-32 pb-12 block">
+        <h1 class="text-2xl font-bold text-center">Lorem ipsum dolor sit.</h1>
+        <div class="pt-7">
+          <label for="">Pendapatan Bulanan*</label>
+          <input type="text" class="border border-black w-full">
+          <button class="p-3 bg-primary rounded-sm">Ok</button>
+        </div>
+      </div>
+    </section>
     <script src="./dist/js/script.js"></script>
   </body>
 </html>
