--- a/index.html
+++ b/index.html
@@ -116,10 +116,48 @@
         <div class="p-8 md:p-12 lg:px-32 lg:py-24 relative z-10 items-center">
           <div class="mx-auto max-w-xl text-center sm:text-start xm:w-1/2">
             <h2 class="sm:text-2xl font-bold text-black lg:text-5xl text-2xl">Zakat Semudah Itu?</h2>
-  
+            
             <p class="text-black/80 mt-4 block lg:pr-24 sm:text-sm">
               Zakat mal dapat dikeluarkan dengan berbagai cara, salah satunya dengan media online. Ayozakat menyediakan jasa pengeluaran zakat mal serta kalkulator penghitung zakat mal yang harus dikeluarkan.</p>
+            </div>
           </div>
+        </div>
+    </section>
+    <section id="benefit" class="container mx-auto">
+      <div class="grid grid-cols-1 lg:grid-cols-3 lg:mt-12 mx-4">
+        <div class="grid grid-cols-1 lg:mx-0 mx-10 mt-10">
+          <div class="inline-flex mx-auto gap-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-coin text-primary w-6 h-6 lg:w-10 lg:h-10" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8m5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0"/>
+              <path d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195z"/>
+              <path d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083q.088-.517.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1z"/>
+              <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 6 6 0 0 1 3.13-1.567"/>
+            </svg>
+            <h1 class="font-semibold text-xl lg:text-3xl">Kewajiban</h1>
+          </div>
+          <p class="text-center flex-wrap mt-8 lg:mx-24 md:mx-10 text-gray-400">
+            Merupakkan kewajiban seorang muslim untuk membayarkan zakat mal.
+          </p>
+        </div>
+        <div class="grid grid-cols-1 lg:mx-0 mx-10 mt-10">
+          <div class="inline-flex mx-auto gap-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-bar-chart text-primary w-6 h-6 lg:w-10 lg:h-10"><line x1="12" y1="20" x2="12" y2="10"></line><line x1="18" y1="20" x2="18" y2="4"></line><line x1="6" y1="20" x2="6" y2="16"></line></svg>
+            <h1 class="font-semibold text-xl lg:text-3xl">Pahala</h1>
+          </div>
+          <p class="text-center flex-wrap mt-8 lg:mx-24 md:mx-10 text-gray-400">
+            Dengan menjalankan zakat seorang muslim akan mendapatkan pahala.
+          </p>
+        </div>
+        <div class="grid grid-cols-1 lg:mx-0 mx-10 mt-10">
+          <div class="inline-flex mx-auto gap-4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-balloon-heart text-primary w-6 h-6 lg:w-10 lg:h-10" viewBox="0 0 16 16">
+              <path fill-rule="evenodd" d="m8 2.42-.717-.737c-1.13-1.161-3.243-.777-4.01.72-.35.685-.451 1.707.236 3.062C4.16 6.753 5.52 8.32 8 10.042c2.479-1.723 3.839-3.29 4.491-4.577.687-1.355.587-2.377.236-3.061-.767-1.498-2.88-1.882-4.01-.721zm-.49 8.5c-10.78-7.44-3-13.155.359-10.063q.068.062.132.129.065-.067.132-.129c3.36-3.092 11.137 2.624.357 10.063l.235.468a.25.25 0 1 1-.448.224l-.008-.017c.008.11.02.202.037.29.054.27.161.488.419 1.003.288.578.235 1.15.076 1.629-.157.469-.422.867-.588 1.115l-.004.007a.25.25 0 1 1-.416-.278c.168-.252.4-.6.533-1.003.133-.396.163-.824-.049-1.246l-.013-.028c-.24-.48-.38-.758-.448-1.102a3 3 0 0 1-.052-.45l-.04.08a.25.25 0 1 1-.447-.224l.235-.468ZM6.013 2.06c-.649-.18-1.483.083-1.85.798-.131.258-.245.689-.08 1.335.063.244.414.198.487-.043.21-.697.627-1.447 1.359-1.692.217-.073.304-.337.084-.398"/>
+            </svg>
+            <h1 class="font-semibold text-xl lg:text-3xl">Membantu Sesama</h1>
+          </div>
+          <p class="text-center flex-wrap mt-8 lg:mx-24 md:mx-10 text-gray-400">
+            Membantu sesama dengan zakat yang anda berikan.
+          </p>
         </div>
       </div>
     </section>
