--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
     </section>
     <section id="benefit" class="container mx-auto">
-      <div class="grid grid-cols-1 lg:grid-cols-3 lg:mt-12 mx-4">
+      <div class="grid grid-cols-1 lg:grid-cols-3 lg:mt-12">
         <div class="grid grid-cols-1 lg:mx-0 mx-10 mt-10">
           <div class="inline-flex mx-auto gap-4">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cash-coin text-primary w-6 h-6 lg:w-10 lg:h-10" viewBox="0 0 16 16">
